--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.3
+  flutter_staggered_grid_view: ^0.6.2
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
