--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^1.1.3
   flutter_staggered_grid_view: ^0.6.2
   url_launcher: ^6.1.10
+  visibility_detector: ^0.4.0+2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
