--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.1.10
   visibility_detector: ^0.4.0+2
   provider: ^6.0.5
+  firebase_core: ^2.13.1
 
 dev_dependencies:
   flutter_test:
