--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   provider: ^6.0.5
   firebase_core: ^2.13.1
+  cloud_firestore: ^4.8.0
 
 dev_dependencies:
   flutter_test:
