--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.5
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
+#  flutter_iconpicker: ^3.2.4
 
 dev_dependencies:
   flutter_test:
